--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,11 @@
                     </div>
                     <div class="footer-section">
                         <h4>Contact</h4>
-                        <p class="contact-info">Have questions? Reach out to us directly through WhatsApp by clicking the Enroll button!</p>
+                        <p class="contact-info">
+  Have questions? Reach out to us directly through WhatsApp by clicking the Enroll button, or email us at 
+  <a href="mailto:sparknix.ai@gmail.com">sparknix.ai@gmail.com</a>.
+</p>
+
                         <a href="https://wa.me/923099224477?text=Hi!%20I'm%20interested%20in%20enrolling%20my%20child%20in%20the%2015-week%20Kids'%20AI%20%26%20Machine%20Learning%20Course%20offered%20by%20Sparknix.%20Could%20you%20please%20share%20details%20about%20the%20curriculum%2C%20class%20timings%2C%20and%20how%20to%20get%20started%3F" class="btn-contact">Contact Us via WhatsApp</a>
                     </div>
                 </div>
